dashboard/dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
  namespace: nginx-ingress
spec:
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: dashboard
  selector:
    app: nginx-ingress
