dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: nginx-ingress
spec:
  ingressClassName: nginx # use only with k8s version >= 1.18.0
  rules:
  - host: dashboard.ingress.demo
    http:
      paths:
      - path: /dashboard.html
        pathType: Prefix
        backend:
          service:
            name: dashboard-svc
            port: 
              number: 9000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: dashboard-svc
            port: 
              number: 9000
